; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_stats.c_stats_metric_init.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_stats.c_stats_metric_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stats_metric = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stats_metric*)* @stats_metric_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stats_metric_init(%struct.stats_metric* %0) #0 {
  %2 = alloca %struct.stats_metric*, align 8
  store %struct.stats_metric* %0, %struct.stats_metric** %2, align 8
  %3 = load %struct.stats_metric*, %struct.stats_metric** %2, align 8
  %4 = getelementptr inbounds %struct.stats_metric, %struct.stats_metric* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  switch i32 %5, label %18 [
    i32 130, label %6
    i32 129, label %10
    i32 128, label %14
  ]

6:                                                ; preds = %1
  %7 = load %struct.stats_metric*, %struct.stats_metric** %2, align 8
  %8 = getelementptr inbounds %struct.stats_metric, %struct.stats_metric* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  br label %20

10:                                               ; preds = %1
  %11 = load %struct.stats_metric*, %struct.stats_metric** %2, align 8
  %12 = getelementptr inbounds %struct.stats_metric, %struct.stats_metric* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  br label %20

14:                                               ; preds = %1
  %15 = load %struct.stats_metric*, %struct.stats_metric** %2, align 8
  %16 = getelementptr inbounds %struct.stats_metric, %struct.stats_metric* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  store i64 0, i64* %17, align 8
  br label %20

18:                                               ; preds = %1
  %19 = call i32 (...) @NOT_REACHED()
  br label %20

20:                                               ; preds = %18, %14, %10, %6
  ret void
}

declare dso_local i32 @NOT_REACHED(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
